fixed post text spacing and alignment a bit

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,12 @@ body {
     width: 100%;
     height: 30%;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 3vh;
+    overflow: hidden;
+    display:flex;
+    justify-content: flex-end;
+    flex-direction:column;
+    padding-bottom: 10%;
 }
 
 .post-rect, .post-body, .post-tri{
